--- a/index.html
+++ b/index.html
@@ -4,17 +4,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Table and Buttons</title>
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
     <table>
       <thead>
-        <th rowspan="2" >№</th>
+        <tr>
+          <th rowspan="2" >№</th>
         <th rowspan="2">Client</th>
         <th rowspan="2">Tovar</th>
         <th rowspan="2">Status</th>
         <th colspan="2">Umimiy xarajatlar</th>
+        </tr>
+        <tr>
+          <th>Xizmat xaq.</th>
+          <th>Yo`l xaq.</th>
+        </tr>
       </thead>
       <tbody>
         <tr >
